# flyn27

./: .gitignore  Dockerfile  README.md  REAMDE.md  docker-compose.yml  pyproject.toml  test.json
nginx/: default.conf
src/: app.py  config.py  main.py  models.py  routes.py  schemas.py  services.py  wsgi.py
src/migrations/versions/: 96749f3f4fbd_initial_migration.py  ee5f199dbfd8_create_entry_table.py
src/records/: __init__.py  models.py  routes.py
src/static/css/: entries.css  upload.css
src/static/js/: init.js
src/templates/: entries.html  list.html  upload.html
tests/: conftest.py  test_get_entries.py  test_upload.py
